# rusty-particle-life

./: Cargo.toml
assets/shaders/: render.wgsl  simulation.wgsl
src/: main.rs  menu.rs  objects.rs  render.rs  render_shader_pipeline.rs  sim_shader_pipeline.rs
