[package]
name = "rusty-particle-life"
version = "0.1.0"
edition = "2021"

# optimize for size for release builds
[profile.release]
opt-level = 's'

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
web-sys = { version = "0.3.64", features = [
    "console",
    "Location",
    "Document",
    "Window",
] }
wasm-bindgen = "0.2.87"
