[package]
name = "rusty-particle-life"
version = "0.1.0"
edition = "2021"

# optimize for size for release builds
[profile.release]
opt-level = 's'

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
web-sys = { version = "0.3.64", features = [
    "console",
    "Location",
    "Document",
    "Window",
    "Navigator",
    "Gpu",
    "Element",
    "HtmlElement",
    "Node",
] }
js-sys = "*"
wasm-bindgen = "0.2.87"
bevy = { version = "0.11", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    "hdr",
    "ktx2",
    "zstd",
    "vorbis",
    "x11",
    "filesystem_watcher",
    "bevy_gizmos",
    "android_shared_stdcxx",
    "tonemapping_luts",
    "default_font",
] }
bytemuck = "*"
bevy_egui = { git = "https://github.com/robertwaltham/bevy_egui.git" } # fixing https://github.com/mvlabat/bevy_egui/issues/194
